--- a/views/rank.ejs
+++ b/views/rank.ejs
@@ -214,7 +214,7 @@
       <button>class</button>
       <button>individual</button>
     </div>
-    <div class="rank-wrapper">
+    <div class="rank-wrapper">  
   <div class="rank-item">
     <div class="circle">2<sup>nd</sup></div>
     <div class="label">2‑1</div>
@@ -274,5 +274,6 @@
     </div>
   </div>
   <iframe class="bottom-nav" src="bottom_nav.html"></iframe>
+  <script src="js/rank.js"></script>
 </body>
 </html>
