leaderboard imsi end

--- a/views/explore.ejs
+++ b/views/explore.ejs
@@ -59,7 +59,7 @@
       <% }) %>
     </div>
   </div>
-  <iframe class="bottom-nav" src="bottom_nav.html"></iframe>
+  <iframe class="bottom-nav" src="/bottom_nav.html"></iframe>
   <script src="js/explore.js"></script>
 </body>
 </html>
