--- a/views/rank.ejs
+++ b/views/rank.ejs
@@ -273,7 +273,7 @@
       </ul>
     </div>
   </div>
-  <iframe class="bottom-nav" src="bottom_nav.html"></iframe>
+  <iframe class="bottom-nav" src="/bottom_nav.html"></iframe>
   <script src="js/rank.js"></script>
 </body>
 </html>
