--- a/views/post.ejs
+++ b/views/post.ejs
@@ -10,10 +10,7 @@
   <div class="container">
     <!-- 헤더 -->
     <div class="header">
-      <button class="back-btn">
-        <img src="images/post/back_icon.png" alt="뒤로가기">
-      </button>
-      <h2 style="font-size: 1.5rem; ">post</h2>
+      <h2 style="font-size: 1.5rem; ">Post</h2>
     </div>
 
     <!-- 이미지 업로드 -->
