--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -96,11 +96,10 @@ body {
     color: #000;
 }
 
-.event-item .event-actions img {
-    width: 1.25rem;
-    height: 1.25rem;
-    margin-left: .75rem;
-    cursor: pointer;
+.event-time {
+    font-size: 1rem;
+    font-weight: 600;
+    color: #444;
 }
 
 @media screen and (max-width: 480px) {
