--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -5,29 +5,42 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My Page</title>
   <link rel="stylesheet" href="/css/profile.css">
-  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 </head>
 <body>
   <div class="container">
     <!-- 프로필 -->
     <div class="profile-section">
-      <div class="title" style="margin-top: 2rem;">my page</div>
-      <div class="class"><span id="student-class"></span></div>
+      <div class="title" style="margin-top: 2rem;">마이 페이지</div>
+      <div class="class"><span id="student-class"><%= `${student_id[0]}-${Number(student_id.substring(1, 3))}` %></span></div>
       <div class="id-label">
-        <strong style="font-size: 1.1rem;">ID <span id="username"></span></strong>
-        <br>학번 <span id="student-id"></span>
+        <strong style="font-size: 1.1rem;"><span id="username"><%= username %></span></strong>
+        <br><span id="student-id"><%= student_id %></span>
       </div>
     </div>
 
     <hr class="divider">
 
     <!-- 이벤트 목록 -->
-    <div class="events-title" style="font-weight: 700; color: black;">Your events</div>
+    <div class="events-title" style="font-weight: 700; color: black;">나의 제출 현황</div>
     <div class="events-list">
-      <!-- Supabase에서 불러온 데이터가 여기에 동적으로 추가됩니다. -->
+      <% images.forEach((image) => { %>
+      <%
+      let s = image.total_time
+      const h = parseInt(s / 3600)
+      s = s % 3600
+      const m = parseInt(s / 60)
+      s = s % 60
+      %>
+        <div class="event-item">
+          <img class="event-thumb" src="<%= image.image_link %>" alt="이벤트 이미지">
+          <div class="event-info">
+            <div class="event-date"><%= image.created_date %></div>
+            <div class="event-time"><%= h %>h <%= m %>m <%= s %>s</div>
+          </div>
+        </div>
+      <% }) %>
     </div>
   </div>
-  <script src="/js/profile.js"></script>
   <!-- 바텀 내비게이션 -->
   <%- include('partials/bottom_nav') %>
 </body>
