--- a/views/leaderboard.ejs
+++ b/views/leaderboard.ejs
@@ -25,9 +25,9 @@
       <li class="rank-item">
         <div class="badge first">1st</div>
         <div class="progress-block">
-          <div class="rank-info"><%= rank[0].student_id %></div>
+          <div class="rank-info"><%= rank[0].student_id %> <%= rank[0].username %> <span id="rightt"><%= rank[0].total_count %> 업로드</span></div>
           <div class="progress-container">
-            <div class="progress-bar" style="width: 90%;"></div>
+            <div class="progress-bar" style="width: 100%;"></div>
           </div>
         </div>
       </li>
@@ -36,9 +36,9 @@
       <li class="rank-item">
         <div class="badge second">2nd</div>
         <div class="progress-block">
-          <div class="rank-info"><%= rank[1].student_id %></div>
+          <div class="rank-info"><%= rank[1].student_id %> <%= rank[1].username %><span id="rightt"><%= rank[1].total_count %> 업로드</span></div>
           <div class="progress-container">
-            <div class="progress-bar" style="width: 75%;"></div>
+            <div class="progress-bar" style="width:<%= rank[1].total_count / rank[0].total_count * 100 %>%;"></div>
           </div>
         </div>
       </li>
@@ -47,9 +47,9 @@
       <li class="rank-item">
         <div class="badge third">3rd</div>
         <div class="progress-block">
-          <div class="rank-info"><%= rank[2].student_id %></div>
+          <div class="rank-info"><%= rank[2].student_id %> <%= rank[2].username %><span id="rightt"><%= rank[2].total_count %> 업로드</span></div>
           <div class="progress-container">
-            <div class="progress-bar" style="width: 55%;"></div>
+            <div class="progress-bar" style="width:<%= rank[2].total_count / rank[0].total_count * 100 %>%;"></div>
           </div>
         </div>
       </li>
@@ -58,9 +58,9 @@
       <li class="rank-item">
         <div class="badge plain">4</div>
         <div class="progress-block">
-          <div class="rank-info">000</div>
+          <div class="rank-info"><%= rank[3].student_id %> <%= rank[3].username %><span id="rightt"><%= rank[3].total_count %> 업로드</span></div>
           <div class="progress-container">
-            <div class="progress-bar" style="width: 40%;"></div>
+            <div class="progress-bar" style="width:<%= rank[3].total_count / rank[0].total_count * 100 %>%;"></div>
           </div>
         </div>
       </li>
@@ -69,9 +69,9 @@
       <li class="rank-item">
         <div class="badge plain">5</div>
         <div class="progress-block">
-          <div class="rank-info">000</div>
+          <div class="rank-info"><%= rank[4].student_id %> <%= rank[4].username %><span id="rightt"><%= rank[4].total_count %> 업로드</span></div>
           <div class="progress-container">
-            <div class="progress-bar" style="width: 25%;"></div>
+            <div class="progress-bar" style="width:<%= rank[4].total_count / rank[0].total_count * 100 %>%;"></div>
           </div>
         </div>
       </li>
@@ -93,7 +93,7 @@
           <div class="post-card" > 
             <img src="<%= image.image_link %>" class="zoomable-image" alt="post image" />
             <div class="card-content">
-              <div class="title"><%= image.student_id %></div>
+              <div class="title"><%= image.student_id %> <%= image.username %></div>
               <div class="date"><%= h %>h <%= m %>m <%= s %>s</div>
               <div class="streak"><%= image.text %></div>
             </div>
