--- a/views/leaderboard.ejs
+++ b/views/leaderboard.ejs
@@ -78,7 +78,8 @@
       <% } %>
     </ul>
     <!-- 갤러리 보기 버튼(추가요망) -->
-
+    <button class="gallery-btn" onclick="location.href='/gallery/<%= classId %>'">갤러리 보기</button>
+    <br>
     <% if (images.length > 0) { %>
     <!-- 포스트 카드들 -->
       <div class="card-wrap" style="padding-top: 2rem;">
