--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -16,6 +16,8 @@
         <strong style="font-size: 1.1rem;"><span id="username"><%= username %></span></strong>
         <br><span id="student-id"><%= student_id %></span>
       </div>
+      <button class="logout-btn" onclick="location.href='/logout'">Log out</button>
+
     </div>
 
     <hr class="divider">
